--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Theme CSS -->
     <link href="css/agency.css" rel="stylesheet">
-        <link href="test.php">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,6 +35,6 @@
 </head>
 
 <body id="page-top" class="index">
-
+<a href="test.php">test</a>
     </body>
     </html>
