--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 </head>
 
 <body id="page-top" class="index">
-<a href="test.php">test</a>
+<a href="test.php">test ou test pas</a>
     </body>
     </html>
